[project]
name = "cespy"
version = "0.1.0"
description = "A unified Python toolkit for automating SPICE circuit simulators, merging functionality from kupicelib and kuPyLTSpice."
license = "GPL-3.0"
authors = [
    {name = "Ryota Kobayashi",email = "s.woods.m.29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "numpy",
  "scipy",
  "psutil",
  "clipboard",
  "matplotlib",
  "keyboard",
  "types-keyboard>=0.13.2.20240310",
  "types-psutil>=7.0.0.20250516",
  "pandas>=2.2.3",
  "pandas-stubs>=2.2.3.241126",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/RK0429/cespy"
Repository = "https://github.com/RK0429/cespy.git"

[tool.poetry]
packages = [{include = "cespy", from = "src"}]
include = ["src/cespy/editor/data/asc_to_qsch_data.xml"]

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pytest = "^7.4.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cespy-asc-to-qsch = "cespy.editor.asc_to_qsch:main"
cespy-run-server = "cespy.client_server.run_server:main"
